[workspace]

resolver = "2"
members = [
    "lib/js_math",

    "aoc2019/aoc4",
    "aoc2019/aoc5",
    "aoc2019/aoc6",
    "aoc2019/aoc7",
    "aoc2019/aoc8",
    "aoc2019/aoc9",
    "aoc2019/aoc10",
    "aoc2019/aoc11",
    "aoc2019/aoc12",
    "aoc2019/aoc13",
    "aoc2019/aoc14",
    "aoc2019/aoc15",
    "aoc2019/aoc16",
    "aoc2019/aoc17",
    "aoc2019/aoc18",
    "aoc2019/aoc19",
    "aoc2019/aoc20",
    "aoc2019/aoc21",
    "aoc2019/aoc22",
    "aoc2019/aoc23",
    "aoc2019/aoc24",

    "aoc2023/aoc01",
    "aoc2023/aoc02",
    "aoc2023/aoc03",
    "aoc2023/aoc04",
]
