[workspace]

resolver = "2"
members = [
    "lib/js_math",

    "aoc19/aoc4",
    "aoc19/aoc5",
    "aoc19/aoc6",
    "aoc19/aoc7",
    "aoc19/aoc8",
    "aoc19/aoc9",
    "aoc19/aoc10",
    "aoc19/aoc11",
    "aoc19/aoc12",
    "aoc19/aoc13",
    "aoc19/aoc14",
    "aoc19/aoc15",
    "aoc19/aoc16",
    "aoc19/aoc17",
    "aoc19/aoc18",
    "aoc19/aoc19",
    "aoc19/aoc20",
    "aoc19/aoc21",
    "aoc19/aoc22",
    "aoc19/aoc23",
    "aoc19/aoc24",

    "aoc23/day01",
    "aoc23/day02",
    "aoc23/day03",
    "aoc23/day04",
    "aoc23/day05",
    "aoc23/day06",
    "aoc23/day07",
    "aoc23/day08",
    "aoc23/day09",
    "aoc23/day10",
    "aoc23/day11",
]
